# openapi-mcp

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
apps/endpoint-picker/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/endpoint-picker-mcp/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/endpoint-picker-mcp/src/: PickerMcp.tsx  main.tsx  picker.css
apps/endpoint-picker/src/: App.tsx  index.css  openapiOps.ts
deploy/: DEPLOY.md  install.sh
deploy/nginx/: openapi-mcp.conf
deploy/systemd/: openapi-mcp.service
docs/: PLATFORM.md
src/openapi_mcp_builder/: __init__.py  __main__.py  auth.py  client.py  config.py  models.py  operation_key.py  server.py  spec_external_refs.py  spec_inspect.py  spec_ref_prune.py  spec_trim.py  static_resources.py  tool_filter_validate.py  workflow.py
src/openapi_mcp_builder/static/: endpoint_picker_mcp.html
tests/: conftest.py  test_auth.py  test_endpoint_picker.py  test_spec_external_refs.py  test_spec_inspect.py  test_spec_ref_prune.py  test_spec_trim.py  test_tool_filter_validate.py  test_workflow.py
