[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openapi-mcp-builder"
version = "0.1.0"
description = "MCP server that turns any OpenAPI spec URL into a hosted MCP server via the Trimble Agentic AI Platform."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Trimble" }]
keywords = ["mcp", "openapi", "trimble", "agentic-ai", "fastmcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "respx>=0.21.1",
    "ruff>=0.5.0",
]

[project.scripts]
openapi-mcp-builder = "openapi_mcp_builder.__main__:main"

[project.urls]
Homepage = "https://docs.trimblecloud.com/agentic-ai-platform"
Documentation = "https://docs.trimblecloud.com/agentic-ai-platform"

[tool.hatch.build.targets.wheel]
packages = ["src/openapi_mcp_builder"]

[tool.hatch.build.targets.wheel.force-include]
"src/openapi_mcp_builder/static/endpoint_picker_mcp.html" = "openapi_mcp_builder/static/endpoint_picker_mcp.html"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]
